--- a/BallClub/BallClub/Storyboards/User.storyboard
+++ b/BallClub/BallClub/Storyboards/User.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
-                            <tableViewSection id="zwh-hV-mEC">
+                            <tableViewSection id="I3G-RE-a5L">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="G6k-Fg-BeV">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
@@ -51,6 +51,39 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="jhC-Nc-x8L" secondAttribute="trailing" constant="35" id="xQe-uA-s7D"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="XsQ-9J-cWP">
+                                        <rect key="frame" x="0.0" y="60" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XsQ-9J-cWP" id="gUg-Pt-g10">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_signout" translatesAutoresizingMaskIntoConstraints="NO" id="KYa-Ct-ZTW">
+                                                    <rect key="frame" x="17" y="10" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="TYh-gH-H5K"/>
+                                                        <constraint firstAttribute="width" constant="40" id="qjV-qe-J0l"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjP-58-RRE">
+                                                    <rect key="frame" x="77" y="20" width="255" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="KYa-Ct-ZTW" firstAttribute="leading" secondItem="gUg-Pt-g10" secondAttribute="leadingMargin" constant="9" id="NqU-KL-cNf"/>
+                                                <constraint firstItem="kjP-58-RRE" firstAttribute="leading" secondItem="KYa-Ct-ZTW" secondAttribute="trailing" constant="20" id="VRm-KS-cCV"/>
+                                                <constraint firstItem="KYa-Ct-ZTW" firstAttribute="centerY" secondItem="gUg-Pt-g10" secondAttribute="centerY" id="ddu-VP-YIv"/>
+                                                <constraint firstItem="kjP-58-RRE" firstAttribute="centerY" secondItem="gUg-Pt-g10" secondAttribute="centerY" id="gd1-ht-7g6"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="kjP-58-RRE" secondAttribute="trailing" constant="35" id="v5N-Cw-Rob"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="ptO-WS-Gao" kind="show" id="2lm-Cc-8TK"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -847,6 +880,144 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l83-SH-9W9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-87.200000000000003" y="317.99100449775113"/>
+        </scene>
+        <!-- Change Password-->
+        <scene sceneID="nKM-6T-Ucs">
+            <objects>
+                <viewController id="ptO-WS-Gao" customClass="ChangePasswordViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aXh-qR-zUa"/>
+                        <viewControllerLayoutGuide type="bottom" id="1yh-oa-cX6"/>
+                    </layoutGuides>
+                    <string key="title" base64-UTF8="YES">
+EENoYW5nZSBQYXNzd29yZA
+</string>
+                    <view key="view" contentMode="scaleToFill" id="EOI-Vi-QA0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="747" text="*Password must contain at least 4 characters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RDE-AT-6Hv">
+                                <rect key="frame" x="32" y="252" width="313" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="245" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Old Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="10B-g2-bhN" customClass="HoshiTextField" customModule="TextFieldEffects">
+                                <rect key="frame" x="32" y="111" width="313" height="48"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="Adi-PQ-eQq"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderInactiveColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderActiveColor">
+                                        <color key="value" red="0.86274509799999999" green="0.36078431370000003" blue="0.027450980390000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="placeholderFontScale">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="New Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kVy-xU-QZ9" customClass="HoshiTextField" customModule="TextFieldEffects">
+                                <rect key="frame" x="32" y="196" width="313" height="48"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="Xxk-Ho-VDh"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                        <color key="value" cocoaTouchSystemColor="darkTextColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderActiveColor">
+                                        <color key="value" red="0.86274509799999999" green="0.36078431370000003" blue="0.027450980390000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderInactiveColor">
+                                        <color key="value" cocoaTouchSystemColor="darkTextColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="placeholderFontScale">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1t-sY-OJj">
+                                <rect key="frame" x="56" y="468" width="264" height="51"/>
+                                <color key="backgroundColor" red="0.86274509799999999" green="0.36078431370000003" blue="0.027450980390000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="uCo-LI-dFG"/>
+                                </constraints>
+                                <state key="normal" title="Submit">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapOnSubmitButton:" destination="ptO-WS-Gao" eventType="touchUpInside" id="Pge-vx-e6T"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xVr-1H-qEU" customClass="HoshiTextField" customModule="TextFieldEffects">
+                                <rect key="frame" x="32" y="306" width="313" height="48"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="i5P-I6-QxO"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderActiveColor">
+                                        <color key="value" red="0.86274509799999999" green="0.36078431370000003" blue="0.027450980390000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderInactiveColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="placeholderFontScale">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RDE-AT-6Hv" firstAttribute="leading" secondItem="EOI-Vi-QA0" secondAttribute="leadingMargin" constant="16" id="27B-Dy-WDt"/>
+                            <constraint firstItem="10B-g2-bhN" firstAttribute="top" secondItem="aXh-qR-zUa" secondAttribute="bottom" constant="47" id="2pc-hq-gKr"/>
+                            <constraint firstItem="xVr-1H-qEU" firstAttribute="top" secondItem="RDE-AT-6Hv" secondAttribute="bottom" constant="37" id="LiV-EA-84r"/>
+                            <constraint firstItem="RDE-AT-6Hv" firstAttribute="top" secondItem="kVy-xU-QZ9" secondAttribute="bottom" constant="8" id="SYy-Bg-iSS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="e1t-sY-OJj" secondAttribute="trailing" constant="39" id="SzQ-Wk-Zxz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RDE-AT-6Hv" secondAttribute="trailing" constant="14" id="cFJ-z3-AdL"/>
+                            <constraint firstItem="kVy-xU-QZ9" firstAttribute="top" secondItem="10B-g2-bhN" secondAttribute="bottom" constant="37" id="eaX-ya-1ap"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xVr-1H-qEU" secondAttribute="trailing" constant="14" id="fRu-k6-e0a"/>
+                            <constraint firstItem="xVr-1H-qEU" firstAttribute="leading" secondItem="EOI-Vi-QA0" secondAttribute="leadingMargin" constant="16" id="jqN-8K-yHR"/>
+                            <constraint firstItem="e1t-sY-OJj" firstAttribute="leading" secondItem="EOI-Vi-QA0" secondAttribute="leadingMargin" constant="40" id="lCK-51-t8B"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="10B-g2-bhN" secondAttribute="trailing" constant="14" id="ldX-Qj-1Gs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kVy-xU-QZ9" secondAttribute="trailing" constant="14" id="nH7-hi-OQu"/>
+                            <constraint firstItem="1yh-oa-cX6" firstAttribute="top" secondItem="e1t-sY-OJj" secondAttribute="bottom" constant="99" id="xEN-EM-4Bp"/>
+                            <constraint firstItem="kVy-xU-QZ9" firstAttribute="leading" secondItem="EOI-Vi-QA0" secondAttribute="leadingMargin" constant="16" id="xdK-fB-aJq"/>
+                            <constraint firstItem="10B-g2-bhN" firstAttribute="leading" secondItem="EOI-Vi-QA0" secondAttribute="leadingMargin" constant="16" id="yUB-t6-wlw"/>
+                        </constraints>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="confirmPasswordTextField" destination="xVr-1H-qEU" id="Ov5-e7-jRe"/>
+                        <outlet property="newPasswordTextField" destination="kVy-xU-QZ9" id="sOg-5D-2yq"/>
+                        <outlet property="oldPasswordTextField" destination="10B-g2-bhN" id="NPQ-5G-74Z"/>
+                        <outlet property="submitButton" destination="e1t-sY-OJj" id="xpy-FE-usy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N0H-CT-gS3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2641" y="-36"/>
         </scene>
     </scenes>
     <resources>
